PROJECT(pi C CXX ASM)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)


SET_PROPERTY(GLOBAL PROPERTY PROJECT_SOURCE_LIST "")

FUNCTION(GET_PI_SOURCE CURDIR)
    FILE(GLOB CHILDREN RELATIVE ${CURDIR} ${CURDIR}/*)

    # MESSAGE(STATUS "CHILDREN is ${CHILDREN}")

    AUX_SOURCE_DIRECTORY(${CURDIR} CURR_DIR_SRCS)

    # MESSAGE(STATUS "CURR_DIR_SRCS is ${CURR_DIR_SRCS}")

    GET_PROPERTY(TEMP_SRCS GLOBAL PROPERTY "PROJECT_SOURCE_LIST")

    SET(TEMP_SRCS ${TEMP_SRCS} ${CURR_DIR_SRCS})

    SET_PROPERTY(GLOBAL PROPERTY PROJECT_SOURCE_LIST "${TEMP_SRCS}")

    SET(CURR_DIR_SRCS "")

    FOREACH(CHILD ${CHILDREN})
        IF(IS_DIRECTORY ${CURDIR}/${CHILD})
            GET_PI_SOURCE("${CURDIR}/${CHILD}")
        ENDIF()
    ENDFOREACH()

ENDFUNCTION(GET_PI_SOURCE)

GET_PI_SOURCE(${PROJECT_SOURCE_DIR}/application)
GET_PI_SOURCE(${PROJECT_SOURCE_DIR}/driver)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR} MAIN_SOURCES)


GET_PROPERTY(PROJECT_SOURCES GLOBAL PROPERTY "PROJECT_SOURCE_LIST")

ADD_DEFINITIONS(-DDATA_IN_ExtSRAM)


SET(STM32Cube_DIR ${PACKAGES_DIR}/STM32Cube_FW_F1_V1.6.1)
SET(STM32_LINKER_SCRIPT ${CMAKE_CURRENT_SOURCE_DIR}/STM32F103ZE_FLASH.ld)
SET(STM32_CHIP STM32F103ZE)

SET(FREERTOS_HEAP_IMPL 4)

FIND_PACKAGE(CMSIS REQUIRED)
FIND_PACKAGE(STM32HAL COMPONENTS uart gpio usart sram REQUIRED)
FIND_PACKAGE(LittlevGL REQUIRED)
FIND_PACKAGE(FreeRTOS REQUIRED)
FIND_PACKAGE(PIE REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMSIS_INCLUDE_DIRS}
    ${STM32HAL_INCLUDE_DIR}
    ${FreeRTOS_INCLUDE_DIRS}
    ${LittlevGL_INCLUDE_DIRS}
    ${FATFS_INCLUDE_DIRS}
    ${PIE_INCLUDE_DIRS}
)


ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}
                ${PROJECT_SOURCES}
                ${CMSIS_SOURCES}
                ${STM32HAL_SOURCES}
                ${FreeRTOS_SOURCES}
                ${LittlevGL_SOURCES}
                ${PIE_SOURCES}
                ${MAIN_SOURCES}
)

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_PRINT_SIZE_OF_TARGETS(${CMAKE_PROJECT_NAME})
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
